--- a/app/frontend/cloudbuild_push.yaml
+++ b/app/frontend/cloudbuild_push.yaml
@@ -1,5 +1,7 @@
 options:
   logging: CLOUD_LOGGING_ONLY
+  pool:
+    name: 'projects/$PROJECT_ID/locations/asia-northeast1/workerPools/uma-test-pool'
   env:
     - "DEPLOY_ENV=$_DEPLOY_ENV"
     - "SKAFFOLD_DEFAULT_REPO=asia-northeast1-docker.pkg.dev/$PROJECT_ID/cnsrun-app"
